--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Version 0.1.1 (2021-08-12)
+--------------------------
+Add Terraform Registry badge (#1)
+Update License badge to use HTTPS (#2)
+
 Version 0.1.0 (2021-07-08)
 --------------------------
 Initial release
