--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 0.1.2 (2022-01-20)
+--------------------------
+Update AWS provider to >= 3.41.0 (#3)
+
 Version 0.1.1 (2021-08-12)
 --------------------------
 Add Terraform Registry badge (#1)
