--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 0.2.1 (2022-11-23)
+--------------------------
+Update AWS provider to >= 3.45.0 (#7)
+
 Version 0.2.0 (2022-11-23)
 --------------------------
 Cleanup repo and normalize (#6)
